@@ -1,5 +1,11 @@
 2008-08-13  Bastien Nocera  <hadess@hadess.net>
 
+	* src/plugins/youtube/youtube.py: Patch from Eric Piel
+	<e.a.b.piel@tudelft.nl> to stop the throbber from eating CPU when
+	pulsing (Closes: #546742)
+
+2008-08-13  Bastien Nocera  <hadess@hadess.net>
+
 	* README:
 	* data/totem.ui: Fix "Fit window to movie" and "Zoom reset"
 	keyboard shortcuts (Closes: #546281)
